# website

./: Dockerfile  LICENSE  Main.hs  README  website.cabal
Website.Application/Website/: Application.hs
Website.Application/Website/Application/: BlogPostQueries.hs  BlogPostQueryApiHandler.hs  Common.hs  ProjectQueries.hs  ProjectQueryApiHandler.hs  Queries.hs  QueryApiHandler.hs
Website.Domain/Website/Domain/: BlogPost.hs  BlogPostPresenter.hs  BlogPostRepository.hs  DomainException.hs  GetAllPosts.hs  GetSinglePost.hs  Project.hs
Website.Domain/Website/Domain/Repository/: BlogPostRepository.hs
Website.Domain/Website/Domain/Service/: BlogPostFormatter.hs  ProjectFormatter.hs  ProjectService.hs
Website.Domain/Website/Domain/UseCase/: GetAllPosts.hs  GetAllProjects.hs  GetSinglePost.hs
Website.Infrastructure/Website/Infrastructure/: FileSystemBlogPostRepository.hs  GithubProjectService.hs  HtmlBlogPostFormatter.hs  HtmlBlogPostPresenter.hs  HtmlProjectFormatter.hs
blogpost/BlogPost/: Component.hs
blogpost/BlogPost/Internal/: Entities.hs  Repository.hs  Service.hs  Types.hs
blogpost/BlogPost/Internal/Infrastructure/: FileSystemPersistenceAdapter.hs
blogpost/BlogPost/Internal/Interactor/: GetAllPosts.hs  GetSinglePost.hs
blogpost/BlogPost/Internal/Ports/: PersistenceAdapter.hs  PresenterAdapter.hs
blogpost/BlogPost/Internal/Presentation/: Class.hs
blogpost/BlogPost/Internal/Repository/: Class.hs  FileSystem.hs  InMemory.hs
blogpost/BlogPost/Internal/Service/: Impl.hs
static/posts/: welcome.md
static/templates/: About.hamlet  BlogPost.hamlet  Header.hamlet  Home.hamlet  Navbar.hamlet  Projects.hamlet  Styles.cassius
test/: ProjectsSpec.hs
view/View/: Component.hs
view/View/Internal/: AboutPage.hs  HomePage.hs  Navbar.hs  Static.hs
web/Web/: Component.hs
web/Web/Internal/Controller/: BlogPost.hs
web/Web/Internal/View/: HtmlPresenter.hs  Navbar.hs  Pages.hs  Static.hs
