cabal-version:      2.4
name:               website
version:            0.1.0.0
synopsis:           Personal website.
bug-reports:        https://github.com/aloussase/website.git
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2022
category:           Web
extra-source-files: README
data-files:         static/templates/*.hamlet
                  , static/templates/*.cassius

library blogpost
    ghc-options:      -Wall -Wunused-packages -Wno-name-shadowing
    hs-source-dirs:   blogpost
    exposed-modules:  BlogPost.Component
    other-modules:
        BlogPost.Internal.Repository
      , BlogPost.Internal.Repository.FileSystem
      , BlogPost.Internal.Repository.InMemory
      , BlogPost.Internal.Service
      , BlogPost.Internal.Service.Impl
      , BlogPost.Internal.Types
    build-depends:
        base ^>=4.15.1.0
      , containers
      , directory 
      , filepath
      , text
      , time
    default-language: Haskell2010
    default-extensions: TypeFamilies, OverloadedStrings

library web
    hs-source-dirs:   web
    ghc-options:      -Wall -Wunused-packages
    exposed-modules:  Web.Component
    other-modules:
          Web.Internal.Controller.BlogPost
        , Web.Internal.View.Static
        , Web.Internal.View.Pages
    build-depends:
        base ^>=4.15.1.0
      , blogpost
      , scotty
      , blaze-html
      , blogpost
      , shakespeare
      , text
      , time
    default-language: Haskell2010
    default-extensions: OverloadedStrings, TemplateHaskell, QuasiQuotes, CPP, RecordWildCards

executable website
    main-is:          Main.hs
    ghc-options:      -Wall -Wunused-packages
    build-depends:
        base ^>=4.15.1.0
      , blogpost
      , web
    default-language: Haskell2010
