cabal-version:      2.4
name:               website
version:            0.1.0.0
synopsis:           Personal website.
bug-reports:        https://github.com/aloussase/website.git
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2022
category:           Web
extra-source-files: README
data-files:         static/templates/*.hamlet
                  , static/templates/*.cassius

library blogpost
    ghc-options:      -Wall -Wunused-packages -Wno-name-shadowing
    hs-source-dirs:   blogpost
    exposed-modules:  BlogPost.Component
    other-modules:
        BlogPost.Internal.Repository.Class
      , BlogPost.Internal.Interactor.GetAllPosts
      , BlogPost.Internal.Interactor.GetSinglePost
      , BlogPost.Internal.Presentation.Class
      , BlogPost.Internal.Repository.FileSystem
      , BlogPost.Internal.Types
    build-depends:
        base ^>=4.15.1.0
      , blaze-markup                      >= 0.8.2 && < 0.9
      , directory                         >= 1.3.6 && < 1.4
      , filepath                          >= 1.4.2 && < 1.5
      , lens                              >= 5.2 && < 5.3
      , text                              >= 1.2.5 && < 1.3
      , time                              >= 1.9.3 && < 1.10
      , attoparsec
      , either
    default-language: Haskell2010
    default-extensions: TypeFamilies, OverloadedStrings, TemplateHaskell

library web
    hs-source-dirs:   web
    ghc-options:      -Wall -Wunused-packages
    exposed-modules:  Web.Component
    other-modules:
          Web.Internal.View.HtmlPresenter
    build-depends:
        base ^>=4.15.1.0
      , blogpost
      , blaze-html                        >= 0.9.1 && < 0.10
      , lens                              >= 5.2 && < 5.3
      , pandoc                            >= 2.19.2 && < 2.20
      , scotty                            >= 0.12 && < 0.13
      , shakespeare                       >= 2.0.30 && < 2.1
      , time                              >= 1.9.3 && < 1.10
    default-language: Haskell2010
    default-extensions: OverloadedStrings, TemplateHaskell, QuasiQuotes, CPP, RecordWildCards

executable website
    main-is:          Main.hs
    ghc-options:      -Wall -Wunused-packages
    build-depends:
        base ^>=4.15.1.0
      , blogpost
      , web
    default-language: Haskell2010
