cabal-version:      2.4
name:               website
version:            0.1.0.0
synopsis:           Personal website.
bug-reports:        https://github.com/aloussase/website.git
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2022
category:           Web
extra-source-files: README
data-files:         static/templates/*.hamlet
                  , static/templates/*.cassius

library website-domain
    ghc-options:        -Wall -Wunused-packages -Wno-name-shadowing
    hs-source-dirs:     Website.Domain
    exposed-modules:
        Website.Domain.BlogPost
      , Website.Domain.Project
      , Website.Domain.Repository.BlogPostRepository
      , Website.Domain.Service.BlogPostFormatter
      , Website.Domain.Service.ProjectService
      , Website.Domain.UseCase.GetAllPosts
      , Website.Domain.UseCase.GetSinglePost
    build-depends:
        base ^>=4.15.1.0
      , either
      , exceptions
      , lens                              >= 5.2 && < 5.3
      , modern-uri
      , text
      , text                              >= 1.2.5 && < 1.3
      , time                              >= 1.9.3 && < 1.10
      , validation
    default-language: Haskell2010
    default-extensions: TypeFamilies, OverloadedStrings, TemplateHaskell

library website-infrastructure
    hs-source-dirs:   Website.Infrastructure
    ghc-options:      -Wall -Wunused-packages
    exposed-modules:
          Website.Infrastructure.FileSystemBlogPostRepository
        , Website.Infrastructure.HtmlBlogPostFormatter
        , Website.Infrastructure.GithubProjectService
    build-depends:
        website-domain
      , attoparsec
      , base ^>=4.15.1.0
      , blaze-html                        >= 0.9.1 && < 0.10
      , directory                         >= 1.3.6 && < 1.4
      , filepath                          >= 1.4.2 && < 1.5
      , lens                              >= 5.2 && < 5.3
      , pandoc                            >= 2.19.2 && < 2.20
      , shakespeare                       >= 2.0.30 && < 2.1
      , text
      , time                              >= 1.9.3 && < 1.10
      , either
      , req
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
      , TemplateHaskell
      , QuasiQuotes
      , CPP
      , RecordWildCards
      , FlexibleInstances
      , TypeFamilies

library website-application
    hs-source-dirs:   Website.Application
    ghc-options:      -Wall -Wunused-packages
    exposed-modules:
        Website.Application
    other-modules:
          Website.Application.BlogPostQueries
        , Website.Application.BlogPostQueryApiHandler
    build-depends:
        website-domain
      , website-infrastructure
      , base ^>=4.15.1.0
      , shakespeare                       >= 2.0.30 && < 2.1
      , scotty                            >= 0.12 && < 0.13
      , blaze-html                        >= 0.9.1 && < 0.10
    default-language: Haskell2010
    default-extensions:
          OverloadedStrings
        , TemplateHaskell
        , FlexibleContexts
        , TypeApplications
        , UndecidableInstances
        , GADTs

executable website-exe
    ghc-options:      -Wall -Wunused-packages
    main-is:          Main.hs
    build-depends:
        website-domain
      , website-infrastructure
      , website-application
      , base ^>=4.15.1.0
    default-language: Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
        ProjectsSpec
  hs-source-dirs: test
  build-depends:
        website-domain
      , base ^>=4.15.1.0
      , hspec
      , text
  default-language: Haskell2010
  default-extensions: OverloadedStrings
